--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,47 @@
 language: cpp
 
 compiler:
-  - clang
   - gcc
+  - clang
 
 env:
-  - BUILD_TYPE=Debug
-  - BUILD_TYPE=Release
+  global:
+    - secure: "ttqyPdFYLhW4HBjKZi9qSNlYp4cCerztorW4n86+BPTXWCNGtJBpes/AWJP0Q4xD3HhGssw2TVeV2LmUcxJCGSEKSPVZn4cElgPwbCBuyC5LBBySykN8Gn8qzaSkMN3KPO9nsUsXKHwpqYb+B5QtKusnrgM1p99gbku3xocc2FE="
+  matrix:
+    - BUILD_TYPE=Debug
+    - BUILD_TYPE=Release
 
-before_install:
+matrix:
+  exclude:
+    - compiler: clang
+      env: COVERITY_SCAN_BRANCH_PATTERN=coverity_scan
+    - compiler: gcc
+      env: COVERITY_SCAN_BRANCH_PATTERN=coverity_scan BUILD_TYPE=Release
+
+addons:
+  coverity_scan:
+    project:
+      name: "kartikkumar/cpp-project"
+    notification_email: me@kartikkumar.com
+    build_command_prepend: "mkdir build; cd build; cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_TESTS=on -DBUILD_TESTS_WITH_EIGEN=on .."
+    build_command: "make"
+    branch_pattern: coverity_scan
 
 install:
-  - mkdir build
-  - cd build
-  - cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_TESTS=on -DBUILD_DEPENDENCIES=on ..
-  - make
-  - cd ..
+  - if [ "$COVERITY_SCAN_BRANCH_PATTERN" != "coverity_scan" ] && [ "$CXX" == "g++" ] && [ "$BUILD_TYPE" == "Debug" ]; then
+      sudo pip install cpp-coveralls;
+    fi
 
 script:
-  - cd build
-  - ctest -V
+  - if [ "$COVERITY_SCAN_BRANCH_PATTERN" != "coverity_scan" ]; then
+      mkdir build;
+      cd build;
+      cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_TESTS=on -DBUILD_TESTS_WITH_EIGEN=on ..;
+      make;
+      ctest -V;
+    fi
+
+after_success:
+  - if [ "$COVERITY_SCAN_BRANCH_PATTERN" != "coverity_scan" ] && [ "$CXX" == "g++" ] && [ "$BUILD_TYPE" == "Debug" ]; then
+      coveralls --root .. -E ".*external.*" -E ".*CMakeFiles.*" -E ".*test/.*.cpp.*";
+    fi
