Explicitly set sudo to false to make use of Travis container-based infrastructure. Remove Doxygen scripts and sudo apt-get calls.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
 # Distributed under the MIT License.
 # See accompanying file LICENSE.md or copy at http://opensource.org/licenses/MIT
 
+sudo: false
 language: cpp
 
 compiler:
@@ -23,6 +24,9 @@ matrix:
       env: COVERITY_SCAN_BRANCH_PATTERN=coverity_scan BUILD_TYPE=Release
 
 addons:
+  apt:
+    packages:
+    - cmake
   coverity_scan:
     project:
       name: "kartikkumar/cpp-project"
@@ -32,16 +36,11 @@ addons:
     branch_pattern: coverity_scan
 
 before_install:
-  - sudo chmod ugo+x scripts/update_doxygen.sh
-  - sudo chmod ugo+x scripts/check_doxygen.sh
   # Fetch a newer CMake.
   # https://github.com/bjz/glfw-rs/commit/e9353a14afa5c647497837e16fd44d0e1d6eb326
-  - yes | sudo add-apt-repository ppa:kalakris/cmake
+  #- yes | sudo add-apt-repository ppa:kalakris/cmake
 
 install:
-  - sudo apt-get install cmake
-  - sudo apt-get autoremove
-  - sudo ./scripts/update_doxygen.sh
   - if [ "$COVERITY_SCAN_BRANCH_PATTERN" != "coverity_scan" ] && [ "$CXX" == "g++" ] && [ "$BUILD_TYPE" == "Debug" ]; then
       sudo pip install cpp-coveralls;
     fi
@@ -52,7 +51,6 @@ script:
       cd build;
       cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_TESTS=on -DBUILD_DOXYGEN_DOCS=on ..;
       make;
-      ../scripts/check_doxygen.sh;
       ctest -V;
     fi
 
