Add script to install CMake from source for Travis setup.
Update license copyright year.

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,6 @@ matrix:
       env: COVERITY_SCAN_BRANCH_PATTERN=coverity_scan BUILD_TYPE=Release
 
 addons:
-  apt:
-    packages:
-    - cmake
   coverity_scan:
     project:
       name: "kartikkumar/cpp-project"
@@ -36,6 +33,7 @@ addons:
     branch_pattern: coverity_scan
 
 before_install:
+  - bash scripts/install_cmake.sh
   - bash scripts/install_doxygen.sh
   # Fetch a newer CMake.
   # https://github.com/bjz/glfw-rs/commit/e9353a14afa5c647497837e16fd44d0e1d6eb326
