--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ script:
       cd build;
       $HOME/cmake/bin/cmake -DPROJECT_NAME=cpp_project -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_TESTS=on -DDOXYGEN_EXECUTABLE=$HOME/doxygen/bin/doxygen -DBUILD_DOXYGEN_DOCS=on ..;
       make;
-      ./scripts/check_doxygen.sh
+      ../scripts/check_doxygen.sh
       ctest -V;
     fi
 
