Update project to use Catch2, generate Doxygen docs in /docs, and misc. other fixes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,11 +32,8 @@ if(NOT EXTERNAL_PATH)
   set(EXTERNAL_PATH                            "${PROJECT_PATH}/external")
 endif(NOT EXTERNAL_PATH)
 if(NOT DOXYGEN_PATH)
-  set(DOXYGEN_PATH                             "${PROJECT_PATH}/doxydocs")
+  set(DOXYGEN_PATH                             "${PROJECT_PATH}/docs")
 endif(NOT DOXYGEN_PATH)
-if(NOT DOCS_PATH)
-  set(DOCS_PATH                                "${PROJECT_PATH}/docs")
-endif(NOT DOCS_PATH)
 set(LIB_PATH                                   "${PROJECT_BINARY_DIR}/lib")
 set(LIB_NAME                                   "${PROJECT_NAME}")
 set(BIN_PATH                                   "${PROJECT_BINARY_DIR}/bin")
@@ -45,7 +42,7 @@ set(TEST_PATH                                  "${PROJECT_BINARY_DIR}/test")
 set(TEST_NAME                                  "test_${PROJECT_NAME}")
 
 OPTION(BUILD_MAIN                              "Build main function"            ON)
-OPTION(BUILD_DOXYGEN_DOCS                      "Build docs"                     OFF)
+OPTION(BUILD_DOXYGEN_DOCS                      "Build Doxygen docs"             OFF)
 OPTION(BUILD_TESTS                             "Build tests"                    OFF)
 OPTION(BUILD_DEPENDENCIES                      "Force build of dependencies"    OFF)
 
@@ -120,9 +117,9 @@ if(BUILD_DOXYGEN_DOCS)
                  ${PROJECT_BINARY_DIR}/Doxyfile @ONLY IMMEDIATE)
 
   # Add a custom target to run Doxygen whenever the project is built.
-  # If you do NOT want the documentation to be generated EVERY time you build the project
-  # then leave out the 'ALL' keyword from the command below.
-  add_custom_target(doxygen_docs ALL COMMAND ${DOXYGEN_EXECUTABLE}
+  # If you want the documentation to be generated EVERY time you build the project
+  # then add the 'ALL' keyword before 'COMMAND' below.
+  add_custom_target(doxygen_docs COMMAND ${DOXYGEN_EXECUTABLE}
                     ${PROJECT_BINARY_DIR}/Doxyfile
                     SOURCES ${PROJECT_BINARY_DIR}/Doxyfile)
 endif(BUILD_DOXYGEN_DOCS)
@@ -132,9 +129,9 @@ if(BUILD_TESTS)
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${TEST_PATH})
 
   add_executable(${TEST_NAME} ${TEST_SRC})
-  if(NOT CATCH_FOUND)
-    add_dependencies(${TEST_NAME} catch-lib)
-  endif(NOT CATCH_FOUND)
+  if(NOT CATCH2_FOUND)
+    add_dependencies(${TEST_NAME} catch2-lib)
+  endif(NOT CATCH2_FOUND)
   target_link_libraries(${TEST_NAME} ${LIB_NAME})
   add_test(NAME ${TEST_NAME} COMMAND "${TEST_PATH}/${TEST_NAME}")
 
@@ -165,7 +162,7 @@ set(CPACK_PACKAGE_VERSION_PATCH       "${${CMAKE_PROJECT_NAME}_VERSION_PATCH}")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY   "${CMAKE_PROJECT_NAME}")
 if(WIN32 AND NOT UNIX)
   # There is a bug in NSI that does not handle full unix paths properly. Make
-  # sure there is at least one set of four (4) backlasshes.
+  # sure there is at least one set of four (4) backslashes.
   set(CPACK_NSIS_DISPLAY_NAME         "${CPACK_PACKAGE_INSTALL_DIRECTORY}")
   set(CPACK_NSIS_CONTACT              "${CMAKE_PROJECT_NAME}_VENDOR_CONTACT")
   set(CPACK_NSIS_MODIFY_PATH ON)
